# im

./: .gitignore  LiveUpIM.pem  README.md
src/Classes/: LongConnection.cpp  LongConnection.h  protocol.h  simple_util_bridge_JsAndroidBridge.cpp  simple_util_bridge_JsIOSBridge.cpp
src/Classes/app/: DataDecoderLobby.cpp  DataDecoderLobby.h  DataDecoderRoom.cpp  DataDecoderRoom.h  NetApp.cpp  NetApp.h  NetInformer.cpp  NetInformer.h  RequestBase.cpp  RequestBase.h  ReserveData.h  ResponseBase.h  TmSeqMap.h  Tunnel.cpp  Tunnel.h
src/Classes/bridge/: NativeBuffer.cpp  NativeBuffer.h  SimpleBridge.cpp  SimpleBridge.h  SimpleBridgeAndroid.cpp  SimpleBridgeAndroid.h  SimpleBridgeIos.cpp  SimpleBridgeIos.h  SimpleJsBridge.cpp  SimpleJsBridge.h
src/Classes/jni/: JniHelper.cpp  JniHelper.h
src/Classes/wrap/: aes.cpp  aes.h  buffer_value.cpp  buffer_value.h  byte_order.cpp  byte_order.h  client_socket.cpp  client_socket.h  config.h  counter.h  crypt.cpp  crypt.h  data_block.h  data_decoder.cpp  data_decoder.h  event.cpp  event_handler.cpp  event_handler.h  event_posix.h  event_win.h  event_wrapper.h  file_mgr.cpp  file_mgr.h  funcs.cpp  http_download.cpp  http_download.h  http_download_mgr.cpp  http_download_mgr.h  http_downtype.h  httpcontent.cpp  httpcontent.h  jniloghelp.cpp  jniloghelp.h  md5.cpp  mutex.h  mutex_wrapper.cpp  mutex_wrapper.h  native_buffer.cpp  native_buffer.h  pool.cpp  (+20 more)
src/proj.android/: .gitignore  key.jks
src/proj.android/LongConnectLib/: settings.gradle
src/proj.android/LongConnectLib/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
src/proj.android/LongConnectLib/app/src/androidTest/java/com/lc/jj/longconnectlib/: ExampleInstrumentedTest.java
src/proj.android/LongConnectLib/app/src/main/: AndroidManifest.xml
src/proj.android/LongConnectLib/app/src/main/cpp/: native-lib.cpp
src/proj.android/LongConnectLib/app/src/main/java/com/lc/jj/longconnectlib/: MainActivity.java
src/proj.android/LongConnectLib/app/src/main/res/layout/: activity_main.xml
src/proj.android/LongConnectLib/app/src/main/res/values/: strings.xml
src/proj.android/LongConnectLib/app/src/test/java/com/lc/jj/longconnectlib/: ExampleUnitTest.java
src/proj.android/LongConnectLib/gradle/wrapper/: gradle-wrapper.properties
src/proj.android/LongConnectLib/lconnectionlibrary/: build.gradle  proguard-rules.pro
src/proj.android/LongConnectLib/lconnectionlibrary/src/main/: AndroidManifest.xml
src/proj.android/MyApplication/: .gitignore  build.gradle
src/proj.android/MyApplication/app/: build.gradle  proguard-rules.pro
src/proj.android/MyApplication/app/libs/: .gitignore  lconnectionlibrary-release.aar
src/proj.android/MyApplication/app/src/main/: AndroidManifest.xml
src/proj.android/MyApplication/gradle/wrapper/: gradle-wrapper.properties
src/proj.ios/LCTest/LCTest/: AppDelegate.h  AppDelegate.m  IMUser.h  IMUser.m  ViewController.h  ViewController.m  main.m
src/proj.ios/LCTest/LCTest.xcodeproj/: project.pbxproj
src/proj.ios/LCTest/LCTest/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
src/proj.ios/LCTest/LCTest/LConnection.framework/: Info.plist  LConnection
src/proj.ios/LCTest/LCTest/LConnection.framework/Headers/: LCRequest.h  LConnection.h
src/proj.ios/LCTest/LCTest/LConnection.framework/Modules/: module.modulemap
src/proj.ios/LCTest/LCTest/LConnection.framework/_CodeSignature/: CodeResources
src/proj.ios/LConnection/LConnection/: LCRequest.h  LCRequest.mm  LCResponse.h  LConnection.h  LConnection.mm  LConnectionMain.h  merge.sh
src/proj.ios/LConnection/LConnection.xcodeproj/: project.pbxproj
src/proj.ios/LConnection/LConnection.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/proj.ios/LConnection/LConnectionTest/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
src/proj.ios/LConnection/LConnectionTest/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
src/proj.win32/LongConnection/: .gitignore  LongConnection.sln
src/proj.win32/LongConnection/LcTest/: LcTest.cpp  LcTest.vcxproj  LcTest.vcxproj.filters  NativeBuffer.cpp  NativeBuffer.h  ReadMe.txt  VSBridge.cpp  VSBridge.h  stdafx.cpp
src/proj.win32/LongConnection/LongConnection/: .gitignore  LongConnection.vcxproj  LongConnection.vcxproj.filters  ReadMe.txt  stdafx.cpp
(+32 files in other folders)
